cluster/infrastructure/fluxcd-capacitor/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: capacitor
  namespace: flux-system
  labels:
    app: capacitor
spec:
  selector:
    app: capacitor
  ports:
    - name: http
      port: 9000
      targetPort: 9000
  type: ClusterIP
